<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDF3CF"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/photo_editing"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/ph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b1"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b2"/>

        <TextView
            android:id="@+id/ph2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />


        <TextView
            android:id="@+id/ph3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe3"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />



        <TextView
            android:id="@+id/ph4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe4"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />



        <TextView
            android:id="@+id/ph5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/ph6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pe6"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b3"/>

        <TextView
            android:id="@+id/ph7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_edting_samples"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b5"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/b3"/>


    </LinearLayout>

</ScrollView>